--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,6 +11,7 @@ body {
   font-family: var(--font-family);
   font-size: 20px;
   font-weight: 400;
+  height: 100%;
   margin: 0;
 }
 
@@ -38,14 +39,55 @@ ul {
   cursor: pointer;
   font-size: 20px;
   font-weight: bold;
-  padding: 18px 36px;
+  padding: 18px 40px;
 }
 
 /* END BUTTON STYLE */
 
+.f-container {
+  height: 100vh;
+  /* for shorter content */
+  display: flex;
+  flex-direction: column;
+
+  /*ie10*/
+  display: -ms-flexbox;
+  -ms-flex-direction: column;
+}
+
 header,
+footer {
+  flex-basis: 50px;
+
+  /*ie10*/
+  -ms-flex-preferred-size: 50px;
+
+  /*vertical*/
+  -ms-flex-line-pack: distribute;
+  /*or justify*/
+}
+
+footer {
+  /*ie10 short content*/
+  margin-top: auto;
+}
+
+header {
+  margin: 0 90px 0 74px;
+}
+
 main {
-  margin: 0 60px;
+  flex: 1;
+
+  /*ie10*/
+  -ms-flex: 1 1 auto;
+  /*needs both shrink and grow*/
+  margin: 0 150px;
+}
+
+/* fixed header and footer with scrollable main section */
+.fixed-hf .main {
+  overflow-y: auto;
 }
 
 .wrapper {
@@ -53,7 +95,7 @@ main {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 80px 0;
+  padding: 60px 0;
 }
 
 .menu-header {
@@ -178,12 +220,13 @@ main {
 /* PRE-CONTENT */
 .pre-content {
   display: flex;
-  width: 100%;
-  margin: 220px auto 130px;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
 .content-left {
   width: 50%;
+  padding: 100px 90px 20px 0;
 }
 
 .content-left .text-pre {
@@ -191,7 +234,7 @@ main {
   font-size: 80px;
   font-style: normal;
   font-weight: 700;
-  width: 90%;
+  width: 100%;
 }
 
 .content-left .dot {
@@ -208,7 +251,8 @@ main {
 }
 
 .content-left .text {
-  margin: 50px 50px 50px 0;
+  padding: 50px 0;
+  margin-bottom: 16px;
 }
 
 .content-left .btn-work {
@@ -219,9 +263,6 @@ main {
 }
 
 .content-right {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 50%;
 }
 
@@ -238,10 +279,12 @@ main {
   width: 100%;
   height: 100%;
 }
+
 .slider-breadcrumbs .breadcrumbs {
   height: 120px;
   position: relative;
 }
+
 /* END OFFER CONTENT */
 
 /* FLOW-CONTENT */
@@ -249,7 +292,7 @@ main {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  margin: 200px auto;
+  padding: 90px 0 130px;
 }
 
 .flow-content .item {
@@ -310,12 +353,12 @@ main {
   top: 80px;
   left: 0;
   border-radius: 0 0 15px 15px;
-  padding: 30px 20px 13px;
+  padding: 34px 20px 13px;
   transition: height 0.3s ease 0.3s, opacity 0.45s ease, visibility 0s linear 0.45s;
 }
 
 .flow-content .item:hover .content-hover {
-  height: 115px;
+  height: 145px;
   opacity: 1;
   visibility: visible;
 }
@@ -390,11 +433,10 @@ main {
 /* FOOTER */
 footer {
   background-color: var(--white);
-  margin-top: 130px;
 }
 
 footer .container {
-  padding: 22px 0;
+  padding: 21px 0;
   margin: 0 150px;
 }
 
@@ -511,7 +553,7 @@ footer .container {
 .footer-right {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   height: 100%;
 }
 
@@ -557,7 +599,8 @@ footer .container {
   display: none;
 }
 
-.hover, .btn-hover {
+.hover,
+.btn-hover {
   transition: .3s ease;
 }
 
@@ -580,7 +623,8 @@ footer .container {
   content: "";
 }
 
-.slick-dots li button:hover, .slick-dots li button:focus {
+.slick-dots li button:hover,
+.slick-dots li button:focus {
   background-color: var(--primary-color);
   border-radius: 50%;
   transition: 0.3s all ease;
