fix conflict responsive

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,7 +9,7 @@ body {
   background-color: var(--dark);
   color: var(--white);
   font-family: var(--font-family);
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
   margin: 0;
   padding: 0;
@@ -37,9 +37,9 @@ ul {
   border-radius: 34px;
   border: 1px solid var(--white);
   cursor: pointer;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
-  padding: 13px 40px;
+  padding: 16px 38px;
 }
 
 /* END BUTTON STYLE */
@@ -69,7 +69,7 @@ ul {
 
   /*needs both shrink and grow*/
   margin: 0 150px;
-  height: calc(100vh - 298px);
+  height: calc(100vh - 366px);
   overflow-y: hidden;
 }
 
@@ -78,11 +78,11 @@ ul {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 40px 0;
+  padding: 80px 0 120px;
 }
 
 .menu-header {
-  width: 75%;
+  width: 70%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -197,7 +197,7 @@ ul {
 .btn-header .dark-btn {
   background-color: transparent;
   color: var(--white);
-  padding: 13px 60px;
+  padding: 16px 56px;
 }
 
 /* PRE-CONTENT */
@@ -206,17 +206,16 @@ ul {
   align-items: flex-end;
   justify-content: space-between;
   width: 100%;
-  padding-top: 60px;
 }
 
 .content-left {
-  flex: 0.4;
+  flex: 0.44;
   padding-bottom: 50px;
 }
 
 .content-left .text-pre {
   font-family: 'Arsenal', sans-serif;
-  font-size: 72px;
+  font-size: 70px;
   font-style: normal;
   font-weight: 700;
   width: 100%;
@@ -236,13 +235,13 @@ ul {
 }
 
 .content-left .text {
-  padding: 25px 0 40px;
+  padding: 25px 60px 40px 0;
   margin-bottom: 16px;
 }
 
 .content-left .btn-work {
   background-color: transparent;
-  padding: 16px 64px 18px;
+  padding: 14px 50px;
   text-transform: uppercase;
   color: var(--white);
 }
@@ -251,6 +250,12 @@ ul {
   flex: 0.5;
   display: flex;
   align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.content-right .banner-img {
+  width: 90%;
+  height: 100%;
 }
 
 /* END PRE-CONTENT */
@@ -336,7 +341,7 @@ ul {
   opacity: 0;
   visibility: hidden;
   position: absolute;
-  top: 70px;
+  top: 65px;
   left: 0;
   border-radius: 0 0 15px 15px;
   padding: 34px 44px 0 53px;
