style responsive version v2.1.0

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -37,9 +37,13 @@ ul {
   border-radius: 34px;
   border: 1px solid var(--white);
   cursor: pointer;
+  display: block;
   font-size: 20px;
   font-weight: bold;
-  padding: 16px 38px;
+  width: 166px;
+  height: 64px;
+  line-height: 64px;
+  text-align: center;
 }
 
 /* END BUTTON STYLE */
@@ -61,24 +65,28 @@ ul {
   margin: 0 90px 0 74px;
 }
 
-.main {
-  flex: 1;
-
-  /*ie10*/
-  -ms-flex: 1 1 auto;
-
-  /*needs both shrink and grow*/
-  margin: 0 150px;
-  height: calc(100vh - 366px);
-  overflow-y: hidden;
-}
-
 .wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 80px 0 120px;
+  max-width: 1920px;
+  padding: 20px 0 70px;
+}
+
+main,
+.footert-wrapper {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+main {
+  flex: 1;
+  /*ie10*/
+  -ms-flex: 1 1 auto;
+  margin: 0 150px;
+  height: calc(100vh - 286px);
+  overflow-y: hidden;
 }
 
 .menu-header {
@@ -189,6 +197,11 @@ ul {
   margin: 20px;
 }
 
+.btn-header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .btn-header .white-btn {
   color: var(--primary-color);
   margin-right: 28px;
@@ -197,7 +210,6 @@ ul {
 .btn-header .dark-btn {
   background-color: transparent;
   color: var(--white);
-  padding: 16px 56px;
 }
 
 /* PRE-CONTENT */
@@ -209,13 +221,14 @@ ul {
 }
 
 .content-left {
-  flex: 0.44;
+  flex: 0 0 calc(50% - 100px);
+  padding-right: 100px;
   padding-bottom: 50px;
 }
 
 .content-left .text-pre {
   font-family: 'Arsenal', sans-serif;
-  font-size: 70px;
+  font-size: 67px;
   font-style: normal;
   font-weight: 700;
   width: 100%;
@@ -235,19 +248,19 @@ ul {
 }
 
 .content-left .text {
-  padding: 25px 60px 40px 0;
-  margin-bottom: 16px;
+  padding: 25px 0 40px;
+  /* padding: 25px 60px 40px 0; */
 }
 
 .content-left .btn-work {
   background-color: transparent;
-  padding: 14px 50px;
-  text-transform: uppercase;
   color: var(--white);
+  text-transform: uppercase;
+  width: 296px;
 }
 
 .content-right {
-  flex: 0.5;
+  flex: 0 0 50%;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
@@ -284,7 +297,7 @@ ul {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  padding: 40px 0;
+  padding-top: 30px;
 }
 
 .flow-content .item {
@@ -439,24 +452,31 @@ footer .container {
   display: flex;
 }
 
-.footer-content .item {
-  width: 33.3333333%;
+.footer-content .footer-left {
+  flex: 0.35;
+}
+
+.footer-content .footer-center {
+  flex: 0.4;
+}
+
+.footer-content .footer-right {
+  flex: 0.25;
 }
 
 .footer-left {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .footer-left .text {
   color: var(--dark);
   font-weight: 700;
   line-height: 30px;
-  text-align: center;
   text-transform: uppercase;
-  margin-left: 80px;
   position: relative;
+  width: 78%;
 }
 
 .footer-left .text .link {
@@ -469,7 +489,7 @@ footer .container {
   width: 77px;
   height: 77px;
   position: absolute;
-  left: -50px;
+  left: -70px;
   top: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -500,16 +520,13 @@ footer .container {
 .footer-center .breadcrumbs .wait {
   background-color: #93CB56;
   position: absolute;
-  left: 25%;
-  -ms-transform: translate(-50%, 0);
-  transform: translate(-50%, 0);
+  left: 120px;
   z-index: 300;
 }
 
 .slider-breadcrumbs .breadcrumbs .join,
 .footer-center .breadcrumbs .join {
   background-color: #059033;
-  padding-left: 20px;
   position: absolute;
   left: 50%;
   -ms-transform: translate(-50%, 0);
@@ -520,29 +537,24 @@ footer .container {
 .slider-breadcrumbs .breadcrumbs .earn,
 .footer-center .breadcrumbs .earn {
   background-color: #064D2F;
-  padding-left: 20px;
   position: absolute;
-  right: -13%;
-  -ms-transform: translate(-50%, 0);
-  transform: translate(-50%, 0);
+  right: 110px;
   z-index: 100;
 }
 
+.slider-breadcrumbs .breadcrumbs .join>.link,
+.footer-center .breadcrumbs .join>.link,
 .slider-breadcrumbs .breadcrumbs .earn>.link,
 .footer-center .breadcrumbs .earn>.link {
-  margin-left: 25px;
+  margin-left: 45px;
 }
 
 .slider-breadcrumbs .breadcrumbs .wait {
-  left: 36%;
-}
-
-.slider-breadcrumbs .breadcrumbs .join {
-  left: 50%;
+  left: 245px;
 }
 
 .slider-breadcrumbs .breadcrumbs .earn {
-  right: 15%;
+  right: 235px;
 }
 
 .footer-right {
@@ -558,7 +570,7 @@ footer .container {
 }
 
 .footer-right .content-avatar {
-  margin-left: 16px;
+  margin-left: 32px;
 }
 
 .mobile-footer {
@@ -585,7 +597,6 @@ footer .container {
 .mobile-footer .btn-content .btn-contact {
   background-color: var(--primary-color);
   color: var(--white);
-  padding: 16px 64px;
 }
 
 /* END FOOTER */
@@ -610,7 +621,7 @@ footer .container {
 }
 
 .btn-hover:hover {
-  box-shadow: inset 285px 0 0 0 var(--white);
+  box-shadow: inset 296px 0 0 0 var(--white);
   color: var(--primary-color);
 }
 
