--- a/assets/responsives.css
+++ b/assets/responsives.css
@@ -1,9 +1,3 @@
-@media only screen and (max-height: 1279px) {
-  main {
-    overflow-y: scroll;
-  }
-}
-
 @media only screen and (max-width: 1605px) {
   body {
     font-size: 16px;
@@ -13,16 +7,13 @@
     margin: 0 50px;
   }
 
-  .main {
-    margin: 0 100px;
-  }
-
   .menu-header {
     width: 75%;
   }
 
   .content-left {
-    flex: 0.5;
+    flex: 0 0 50%;
+    padding-right: 0;
   }
 
   .content-right {
@@ -51,41 +42,38 @@
   }
 
   .footer-center .breadcrumbs .wait {
-    left: 28%;
+    left: 65px;
   }
 
   .footer-center .breadcrumbs .earn {
-    right: -16%;
+    right: 60px;
   }
 
-  .footer-center .breadcrumbs .join>.link,
-  .footer-center .breadcrumbs .earn>.link {
-    margin-left: 50px;
+  .footer-right .content-avatar {
+    margin-left: 16px;
   }
 }
 
 @media only screen and (max-width: 1445px) {
   .btn {
     font-size: 18px;
-    padding: 14px 28px;
   }
 
   .header {
     margin: 0 20px;
   }
 
-  .main {
+  .menu-header {
+    width: 80%;
+  }
+
+  main {
     margin: 0 60px;
   }
 
   .btn-header .white-btn,
   .btn-header .dark-btn {
     width: 140px;
-    padding: 12px 30px;
-  }
-
-  .pre-content {
-    padding-top: 50px;
   }
 
   .content-left .text {
@@ -104,12 +92,24 @@
     padding: 25px 40px 0;
   }
 
-  .flow-content .cash-crop .cash-icon {
-    margin-left: 30px;
+  footer .container {
+    margin: 0 20px;
   }
 
-  footer .container {
-    margin: 0 40px;
+  .footer-content .footer-left {
+    flex: 0.4;
+  }
+
+  .footer-content .footer-center {
+    flex: 0.35;
+  }
+
+  .footer-left .text {
+    width: 70%;
+  }
+
+  .footer-left .cert-icon::before {
+    left: -60px;
   }
 
   .footer-center .breadcrumbs>li {
@@ -119,30 +119,21 @@
   }
 
   .footer-center .breadcrumbs .wait {
-    left: 30%;
+    left: 70px;
   }
 
   .footer-center .breadcrumbs .earn {
-    right: -10%;
-  }
-
-  .footer-center .breadcrumbs .join>.link,
-  .footer-center .breadcrumbs .earn>.link {
-    margin-left: 30px;
+    right: 60px;
   }
 }
 
 @media only screen and (max-width: 1285px) {
   .wrapper {
-    padding: 50px 0 70px;
+    padding: 20px 0 80px;
   }
 
-  .main {
-    margin: 0 20px;
-  }
-
-  .btn-header .dark-btn {
-    padding: 14px 50px;
+  main {
+    margin: 0 30px;
   }
 
   .menu-header .nav-link {
@@ -150,7 +141,7 @@
   }
 
   .content-left .text-pre {
-    font-size: 62px;
+    font-size: 60px;
   }
 
   .flow-content .item {
@@ -183,14 +174,14 @@
   }
 
   .footer-left .text {
-    margin-left: 40px;
+    width: 80%;
   }
 
   .footer-left .cert-icon::before {
     background-size: 50px;
     width: 50px;
     height: 50px;
-    left: -25px;
+    left: -50px;
   }
 
   .footer-center .breadcrumbs li {
@@ -199,21 +190,29 @@
     line-height: 50px;
   }
 
+  .footer-center .breadcrumbs .wait {
+    left: 40px;
+  }
+
   .footer-center .breadcrumbs .earn {
-    right: -14%;
+    right: 30px;
   }
 }
 
 
 /* MOBILE MENU */
-@media only screen and (max-width: 1028px) {
+@media only screen and (max-width: 1200px) {
   .f-container {
     height: 100%;
   }
 
   .header,
-  .main {
+  .block-main {
     margin: 0 40px;
+  }
+
+  .wrapper {
+    padding: 50px 0 80px;
   }
 
   .mobile-only {
@@ -238,7 +237,7 @@
   }
 
   .content-left {
-    width: 65%;
+    width: 70%;
   }
 
   .content-left .text-pre {
@@ -247,7 +246,6 @@
 
   .content-left .btn-work {
     border: 2px solid;
-    margin-top: 50px;
   }
 
   .content-right {
@@ -341,7 +339,7 @@
 
 @media only screen and (max-width: 770px) {
   .content-left {
-    width: 100%;
+    width: 95%;
   }
 
   .content-right .banner-img {
@@ -358,11 +356,11 @@
   }
 
   .slider-breadcrumbs .breadcrumbs .wait {
-    left: 33%;
+    left: 140px;
   }
 
   .slider-breadcrumbs .breadcrumbs .earn {
-    right: 7%;
+    right: 130px;
   }
 
   .flow-content {
@@ -393,14 +391,6 @@
     width: 90%;
     font-size: 32px;
   }
-
-  .slider-breadcrumbs .breadcrumbs .wait {
-    left: 27%;
-  }
-
-  .slider-breadcrumbs .breadcrumbs .earn {
-    right: -11%;
-  }
 }
 
 @media only screen and (max-width: 420px) {
@@ -409,15 +399,29 @@
   }
 
   .btn {
-    font-size: 14px;
+    font-size: 12px;
   }
 
-  .main {
-    margin: 0 25px;
+  .block-main {
+    margin: 0;
   }
 
   .pre-content {
     padding-top: 0;
+  }
+
+  .content-left .text-pre {
+    margin-bottom: 32px;
+  }
+
+  .content-left .btn-work {
+    width: 143px;
+    height: 33px;
+    line-height: 33px;
+  }
+
+  .content-right {
+    margin: 50px auto;
   }
 
   .flow-content {
@@ -429,19 +433,10 @@
     padding: 0;
   }
 
-  .content-left .text-pre {
-    width: 100%;
-  }
-
   .flow-content .cash-crop .cash-icon {
     width: 25%;
     margin-top: 0;
     margin-bottom: 10px;
-  }
-
-  .mobile-footer .img-brand>img {
-    margin: 5px 0;
-    width: 80%;
   }
 
   .slider-breadcrumbs .breadcrumbs {
@@ -454,12 +449,19 @@
     line-height: 38px;
   }
 
+  .slider-breadcrumbs .breadcrumbs .join>.link,
+  .footer-center .breadcrumbs .join>.link,
+  .slider-breadcrumbs .breadcrumbs .earn>.link,
+  .footer-center .breadcrumbs .earn>.link {
+    margin-left: 25px;
+  }
+
   .slider-breadcrumbs .breadcrumbs .wait {
-    left: 24%;
+    left: 55px;
   }
 
   .slider-breadcrumbs .breadcrumbs .earn {
-    right: -16%;
+    right: 45px;
   }
 
   /* Slick Slider dots mobile */
@@ -480,7 +482,7 @@
   }
 
   .numbered-block .item .text-block {
-    padding-left: 45px;
+    padding-left: 40px;
     margin: 10px 10px 10px 20px;
   }
 
@@ -494,11 +496,47 @@
   }
 
   .mobile-footer .btn-content .btn-contact {
-    padding: 16px 30px;
+    width: 137px;
+    height: 44px;
+    line-height: 44px;
   }
 
   .mobile-footer .img-brand {
     align-items: flex-start;
+  }
+
+  .mobile-footer .img-brand>img {
+    margin: 5px 0;
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .content-left .text-pre {
+    width: 100%;
+  }
+
+  .slider-breadcrumbs .breadcrumbs .wait {
+    left: 40px;
+  }
+
+  .slider-breadcrumbs .breadcrumbs .earn {
+    right: 30px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .header,
+  main {
+    margin: 0 20px;
+  }
+
+  .content-left .text-pre {
+    width: 100%;
+  }
+
+  .numbered-block .item .text-block::before {
+    left: -5px;
   }
 }
 
