update style version 2.0.0

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,10 +9,12 @@ body {
   background-color: var(--dark);
   color: var(--white);
   font-family: var(--font-family);
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 400;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 a {
@@ -47,13 +49,6 @@ ul {
 }
 
 /* END BUTTON STYLE */
-
-.f-container {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
 .header,
 .footer {
   display: flex;
@@ -71,7 +66,7 @@ ul {
   justify-content: space-between;
   width: 100%;
   max-width: 1920px;
-  padding: 20px 0 70px;
+  padding: 40px 0 80px;
 }
 
 main,
@@ -81,12 +76,8 @@ main,
 }
 
 main {
-  flex: 1;
-  /*ie10*/
-  -ms-flex: 1 1 auto;
-  margin: 0 150px;
-  height: calc(100vh - 286px);
-  overflow-y: hidden;
+  margin: 100px 150px 200px;
+  height: 100%;
 }
 
 .menu-header {
@@ -218,6 +209,7 @@ main {
   align-items: flex-end;
   justify-content: space-between;
   width: 100%;
+  margin-bottom: 60px;
 }
 
 .content-left {
@@ -228,7 +220,7 @@ main {
 
 .content-left .text-pre {
   font-family: 'Arsenal', sans-serif;
-  font-size: 67px;
+  font-size: 72px;
   font-style: normal;
   font-weight: 700;
   width: 100%;
@@ -248,8 +240,7 @@ main {
 }
 
 .content-left .text {
-  padding: 25px 0 40px;
-  /* padding: 25px 60px 40px 0; */
+  padding: 40px 0;
 }
 
 .content-left .btn-work {
@@ -267,7 +258,7 @@ main {
 }
 
 .content-right .banner-img {
-  width: 90%;
+  width: 100%;
   height: 100%;
 }
 
