style responsive version v3.0.0

--- a/assets/responsives.css
+++ b/assets/responsives.css
@@ -11,13 +11,17 @@
     width: 75%;
   }
 
+  main {
+    margin: 100px 100px 200px;
+  }
+
   .content-left {
     flex: 0 0 50%;
     padding-right: 0;
   }
 
-  .content-right {
-    justify-content: flex-end;
+  .content-right .banner-img {
+    width: 90%;
   }
 
   .flow-content .item .content-hover {
@@ -68,7 +72,7 @@
   }
 
   main {
-    margin: 0 60px;
+    margin: 100px 60px 150px;
   }
 
   .btn-header .white-btn,
@@ -76,12 +80,12 @@
     width: 140px;
   }
 
-  .content-left .text {
-    padding: 25px 0 40px 0;
+  .content-left .text-pre {
+    font-size: 67px;
   }
 
-  .content-right .banner-img {
-    width: 95%;
+  .content-left .text {
+    padding: 25px 0 40px 0;
   }
 
   .flow-content {
@@ -133,7 +137,7 @@
   }
 
   main {
-    margin: 0 30px;
+    margin: 20px 30px 150px;
   }
 
   .menu-header .nav-link {
@@ -206,6 +210,10 @@
   .block-main {
     margin: 0 40px;
   }
+  
+  main {
+    margin-bottom: 0;
+  }
 
   .wrapper {
     padding: 50px 0 80px;
@@ -233,7 +241,7 @@
   }
 
   .content-left {
-    width: 70%;
+    width: 55%;
   }
 
   .content-left .text-pre {
@@ -330,6 +338,12 @@
     font-weight: 300;
     line-height: 30px;
     text-align: center;
+  }
+}
+
+@media only screen and (max-width: 1028px) {
+  .content-left {
+    width: 65%;
   }
 }
 
