--- a/assets/styles.css
+++ b/assets/styles.css
@@ -206,7 +206,7 @@ main {
 /* PRE-CONTENT */
 .pre-content {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: space-between;
   width: 100%;
   margin-bottom: 60px;
@@ -215,7 +215,6 @@ main {
 .content-left {
   flex: 0 0 calc(50% - 100px);
   padding-right: 100px;
-  padding-bottom: 50px;
 }
 
 .content-left .text-pre {
