style width for content left

--- a/assets/responsives.css
+++ b/assets/responsives.css
@@ -531,6 +531,10 @@
 }
 
 @media only screen and (max-width: 390px) {
+  .content-left {
+    width: 100%;
+  }
+
   .content-left .text-pre {
     width: 100%;
   }
